explorer-server/code/styles/index.css
:root {
  --primary-background: #000c25;
  --secondary-background: #000c25;
  --accent: #00ABE7;
}

h1, h2, h3, h4, h5 {
  font-family: 'Poppins'!important;
  color: #fff !important;
}

body {
  /* overflow: hidden; */
  font-family: 'Poppins', sans-serif !important;
  background: var(--primary-background);
  color: #fff;
  overflow-y: scroll;
}

a {
  color: var(--accent);
}

a:hover {
  color: var(--accent);
}

#main {
  min-height: calc(100vh - 100px);
  max-width: 2000px;
  margin: auto;
}

.header-ctn {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 50px;
  padding: 0 20px 0 0;
  background-color: var(--primary-background);
}

.header-logo {
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  width: 140px;
  height: 100%;
  justify-content: center;
}

.header-logo img {
  width: 100px;
}

#search-box {
  width: 550px;
  height: 100%;
  padding-left: 20px;
  border-left: 1px solid #646464;
  caret-color: var(--accent);
  color: #fff;
}

#search-box input {
  color: #fff !important;
}

#search-box input::selection {
  background: var(--accent);
}

.homepage__welcome  {
  min-height: calc(100vh - 100px);
  box-sizing: border-box;
  background: var(--primary-background);
  width: 100%;
  position: relative;
  display: flex;
  padding-left: 140px;
  overflow: hidden;
}

.homepage__welcome::before{
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgb(25,64,139);
  background: -moz-linear-gradient(180deg, rgba(25,64,139,0.7) 0%, rgba(25,64,139,0) 100%);
  background: -webkit-linear-gradient(180deg, rgba(25,64,139,0.7) 0%, rgba(25,64,139,0) 100%);
  background: linear-gradient(180deg, rgba(25,64,139,0.7) 0%, rgba(25,64,139,0) 100%);
  z-index: 1;
}

.homepage__text-ctn {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 700px;
  z-index: 80;
}

.homepage__welcome h1  {
  font-size: 64px;
  color: #fff;
  z-index: 88;
  line-height: 1em;
}

.homepage__welcome p  {
  font-size: 18px;
  color: #fff;
  z-index: 88;
}

.btn {
  border: 2px solid var(--accent);
  font-size: 16px;
  padding: 10px 0;
  transition: all ease-in-out 200ms;
  color: #fff;
  z-index: 88;
  width: 200px;
  text-align: center;
  cursor: pointer;
}

.notfound-btn-ctn {
  display: flex;
}

.notfound-btn-ctn a:nth-child(2) {
  margin-left: 20px;
}

.btn:hover {
  background: var(--accent);
  color: #fff;
}

.homepage__network {
  position: absolute;
  right: -200px;
  height: calc(100vh - 100px);
  top: 0;
  animation: network 20s ease-in-out infinite;
}

table.dataTable.no-footer {
  border-bottom: none !important;
}

@keyframes network {
0% {
  opacity: 0.8;
  height: calc(100vh - 100px);
}
50% {
  opacity: 1;
  height: calc(100vh - 50px);
}
100% {
  opacity: 0.8;
  height: calc(100vh - 100px);
}
}

.page_ctn {
  padding: 30px 0;
  min-height: calc(100vh - 100px);
  position: relative;
  /* background-color: var(--secondary-background); */
  /* background-color: #ffffff; */
}

.page_ctn::before{
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 600px;
  background: rgb(25,64,139);
  background: -moz-linear-gradient(180deg, rgba(25,64,139,0.8) 0%, rgba(25,64,139,0) 100%);
  background: -webkit-linear-gradient(180deg, rgba(25,64,139,0.8) 0%, rgba(25,64,139,0) 100%);
  background: linear-gradient(180deg, rgba(25,64,139,0.8) 0%, rgba(25,64,139,0) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#19408b",endColorstr="#000c25",GradientType=1);
  z-index: -1;
}

.page_ctn::after{
  content: "";
  background: url("/assets/network-background2.png") no-repeat;
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 600px;
  background-size: 700px;
  background-position: top right;
  z-index: -1;
  opacity: 0.5;
}

#blocks-table th:nth-child(3),
#blocks-table th:nth-child(4),
#blocks-table th:nth-child(5),
#blocks-table th:nth-child(6) {
  text-align: right !important;
  padding-right: 14px !important;
}

#txs-table th:nth-child(2),
#txs-table th:nth-child(3),
#txs-table th:nth-child(4),
#txs-table th:nth-child(5),
#txs-table th:nth-child(6) {
  text-align: right !important;
  padding-right: 14px !important;
}

#address-txs-table th:nth-child(9) {
  text-align: right !important;
  padding-right: 14px !important;
}

.text-right {
  text-align: right;
}

#footer {
  width: 100%;
  height: 50px;
  color: #646464;
  background: var(--primary-background);
  padding-left: 0px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
}

#blocks-table_length {
  display: none;
}

#blocks-table th {
  padding: 0;
  margin: 0;
}

table.dataTable thead th,
table.dataTable thead td {
  border-bottom: 1px solid rgba(255, 255, 255,0.6) !important;
  text-align: left!important;
  font-weight: 700;
  /* padding-bottom: 8px!important; */
  width: 100px !important;
  padding: 10px !important;
  margin: 0;
  font-size: 14px;
}

table.dataTable tbody td {
  font-weight: 400;
  border-bottom: 1px solid rgba(255, 255, 255,0.1);
  padding: 7px 10px!important;
  color: #fff;
  background-color: transparent !important;
  font-size: 14px;
}

table.dataTable tbody td a {
  font-weight: 600;
}

table.dataTable tbody td a:hover {
  text-decoration: underline;
}

table.dataTable tbody tr {
  background: transparent !important;
}

table.dataTable > tbody > tr:last-child > td {
  border-bottom: 0;
}

table.dataTable tbody tr:hover {
  background: rgba(255, 255, 255, 0.05) !important;
}

.dtr-control::before {
  height: 1em!important;
  width: 1em!important;
  background-color: var(--accent)!important;
  border: none!important;
  box-shadow: 2px 2px 15px 8px #000000;
    -webkit-box-shadow: 2px 2px 15px 8px #000000;
}

table.dataTable thead .sorting {
  background-size: 15px;
}

#pagination {
  margin-top: 40px;
  text-align: center;
}
/* ... */

